scripts/EKSRancherIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cattle-system
  name: rancher-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    app.kubernetes.io/name: aws-load-balancer-controller
    alb.ingress.kubernetes.io/subnets: subnet-094b9dadc7a2c5cfc,PrivateSubnetIDc
    #SSL
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: CertificateARN    
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rancher
              port:
                number: 80
